--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -45,7 +45,7 @@
                 android:background="@android:color/transparent"
                 android:padding="5dp"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/home" />
+                app:srcCompat="@drawable/info" />
 
         </RelativeLayout>
 
